[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sahmk"
version = "0.2.0"
description = "Lightweight Python client for the SAHMK Developer API."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Sahmk", email = "developer@sahmk.sa" }
]
keywords = ["stocks", "tadawul", "market-data", "websocket", "api"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "requests>=2.28.0",
  "websockets>=12.0"
]

[project.scripts]
sahmk = "sahmk.cli:main"

[project.urls]
Homepage = "https://github.com/sahmk-sa/sahmk-python"
Documentation = "https://sahmk.sa/developers/docs"
Repository = "https://github.com/sahmk-sa/sahmk-python"
Issues = "https://github.com/sahmk-sa/sahmk-python/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["sahmk*"]
