[build-system]
requires = ["setuptools>=68,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sahmk"
version = "0.9.1"
description = "Official Python SDK for Sahmk — Saudi market data and richer market workflows for developers."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Sahmk", email = "developer@sahmk.sa" }
]
keywords = ["stocks", "tadawul", "market-data", "saudi-arabia", "api", "sdk", "websocket"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "requests>=2.28.0",
  "websockets>=12.0"
]

[project.scripts]
sahmk = "sahmk.cli:main"

[project.urls]
Homepage = "https://github.com/sahmk-sa/sahmk-python"
Documentation = "https://sahmk.sa/developers/docs"
Repository = "https://github.com/sahmk-sa/sahmk-python"
Issues = "https://github.com/sahmk-sa/sahmk-python/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["sahmk*"]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "pytest-asyncio>=0.21.0",
  "responses>=0.23.0",
  "flake8>=6.0",
  "black>=23.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["sahmk"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:"
]
precision = 1
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
